# CHIEF

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  evaluate.py  infer.py  preprocess.py  pyproject.toml  requirements.txt  train.py
configs/: cq500.yaml  inference.yaml  pretrain.yaml  report_generation.yaml  triage.yaml
data/examples/: negation_rules_zh.json  terminology_map_zh.json  zero_shot_labels_45.json
scripts/: reproduce_metrics.sh
src/chief/: __init__.py  config.py  constants.py
src/chief/cli/: __init__.py  common.py  evaluate.py  infer.py  preprocess.py  train.py
src/chief/data/: __init__.py  collate.py  datasets.py  label_extraction.py  manifests.py  preprocessing.py  text.py  volume_io.py
src/chief/engine/: __init__.py  checkpoint.py  optim.py  trainer.py
src/chief/evaluation/: __init__.py  bootstrap.py  classification.py  generation.py  multilabel.py  retrieval.py
src/chief/models/: __init__.py  attention.py  chief.py  ctvit.py  encoders.py  generation.py  losses.py  probes.py  vq.py
src/chief/tasks/: __init__.py  steps.py  zero_shot.py
src/chief/utils/: __init__.py  device.py  logging.py  seed.py
