[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chief-headct"
version = "2.0.0"
description = "Reference implementation of CHIEF for multimodal emergency head CT research"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "CHIEF authors"}]
dependencies = [
  "torch>=2.3,<3",
  "transformers>=4.40,<5",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.4,<2",
  "scikit-image>=0.22,<1",
  "PyYAML>=6.0,<7",
  "einops>=0.7,<1",
  "vector-quantize-pytorch==1.1.2",
  "tqdm>=4.66,<5",
  "SimpleITK>=2.3,<3",
  "nibabel>=5.2,<6",
  "pyarrow>=15,<21",
]

[project.optional-dependencies]
eval = [
  "nltk>=3.8,<4",
  "sacrebleu>=2.4,<3",
  "jieba>=0.42.1,<1",
  "bert-score>=0.3.13,<0.4",
  "pycocoevalcap>=1.2,<2",
]

[project.scripts]
chief-train = "chief.cli.train:main"
chief-infer = "chief.cli.infer:main"
chief-evaluate = "chief.cli.evaluate:main"
chief-preprocess = "chief.cli.preprocess:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

